--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "jade": "1.9.2",
     "lodash": "3.6.0",
     "react": "0.13.1",
+    "react-router": "^0.13.3",
     "superagent": "1.2.0"
   },
   "devDependencies": {
